# AudioSmith-AI

./: .dockerignore  .env.example  .gitignore  AudioSmith_DeepFilterNet_Finetuning.ipynb  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  generate_audio.py  generate_notebook.py  test.flac  test_delete.py  test_patch.py
.agents/: AGENTS.md
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml  test_inf.py  test_upload.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  audio.py  auth.py  health.py  processing.py  router.py
backend/app/api/v1/schemas/: __init__.py  audio.py  auth.py  processing.py
backend/app/core/: __init__.py  celery_client.py  exceptions.py  middleware.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/migrations/: .gitkeep  env.py
backend/app/db/migrations/versions/: 4a4cdae8be74_add_users_table.py  982cfe296588_add_audio_files_and_processing_jobs.py  de7cd99a15da_add_audio.py
backend/app/models/: __init__.py  audio_file.py  base.py  processing_job.py  user.py
backend/app/repositories/: __init__.py  audio_repository.py  base.py  job_repository.py  user_repository.py
backend/app/services/: __init__.py  audio_service.py  auth_service.py  processing_service.py
backend/app/services/storage/: __init__.py  base.py  local.py
backend/test_audio/: sample.flac
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
backend/worker/: __init__.py  celery_app.py
backend/worker/tasks/: __init__.py  audio_processing.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: ARCHITECTURE.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: Dashboard.module.css  page.tsx
frontend/src/app/results/[id]/: page.module.css  page.tsx
frontend/src/components/auth/: AuthForm.module.css  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/components/common/: Logo.tsx
frontend/src/components/dashboard/: ProcessingHistory.module.css  ProcessingHistory.tsx  UploadSection.module.css  UploadSection.tsx
frontend/src/components/landing/: LandingActions.tsx
frontend/src/components/ui/: FileUpload.module.css  FileUpload.tsx  Toast.module.css  WaveformPlayer.module.css  WaveformPlayer.tsx
frontend/src/features/auth/: AuthForm.tsx
frontend/src/features/dashboard/: DashboardLayout.tsx
frontend/src/features/processing/: AudioUploader.tsx
frontend/src/lib/: ToastContext.tsx
frontend/src/lib/api/: client.ts
frontend/src/lib/auth/: AuthContext.tsx
ml/: __init__.py  config.py  pyproject.toml
ml/configs/: conv_tasnet.yaml  deepfilternet.yaml  train_config.yaml
ml/data/: __init__.py  base.py  librispeech.py  mixer.py  musan.py  voicebank_demand.py
ml/evaluation/: __init__.py  benchmark.py  metrics.py
ml/models/: __init__.py  base.py  conv_tasnet.py  deepfilternet.py  registry.py
ml/postprocessing/: __init__.py  pipeline.py
ml/preprocessing/: __init__.py  normalizer.py  pipeline.py  resampler.py  validator.py
ml/scripts/: __init__.py  download_datasets.py  evaluate.py  export_model.py  finetune.py  train.py
ml/trainers/: trainer.py  wrapper.py
ml/visualization/: __init__.py  spectrogram.py  waveform.py
scratch/: inspect_df.py
scripts/: download_assets.sh  test_inference.py
